objects/Gong__Related_Lead__c.object
<CustomObject>
    <description>junction object for many to many relation
call &lt;--&gt; lead</description>
    <fields>
        <fullName>Gong__Call_Duration_Min__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Call_Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Duration (Min.)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Gong_Interaction_Leads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Lead_Full_Name__c</fullName>
        <formula>HYPERLINK(  Gong__Related_Entity_ID__r.Id  , Gong__Related_Entity_ID__r.FirstName  &amp; &quot; &quot; &amp;  Gong__Related_Entity_ID__r.LastName , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Lead_Name__c</fullName>
        <formula>Gong__Related_Entity_ID__r.LastName  &amp; &quot;, &quot; &amp;  Gong__Related_Entity_ID__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Participants_Emails__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Participants_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participants Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Account__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Primary_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Primary_Opportunity__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Primary_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Related_Entity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Gong Conversations</relationshipLabel>
        <relationshipName>Gong_Interaction_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Started__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Call_Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gong__Title__c</fullName>
        <formula>Gong__Gong_Interaction__r.Gong__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Gong Related Leads</label>
    <nameField>
        <displayFormat>GL-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Related Leads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>